<resources>
    <string name="app_name">Hangouts</string>
    <string name="english">English</string>
    <string name="spanish">Español</string>
    <string name="name">Name</string>
    <string name="enter_name">Enter name</string>
    <string name="phone">Phone</string>
    <string name="enter_phone">Enter phone</string>
    <string name="email">Email</string>
    <string name="enter_email">Enter email</string>
    <string name="address">Address</string>
    <string name="enter_address">Enter address</string>
    <string name="notes">Notes</string>
    <string name="enter_note">Enter note</string>
    <string name="add_contact">Add Contact</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="name_required">Name is required</string>
    <string name="contact_added">Contact added</string>
    <string name="contact_updated">Contact updated</string>
    <string name="contact_deleted">Contact deleted</string>
    <string name="contact_add_error">Error adding contact</string>
    <string name="error_updating_contact">Error updating contact</string>
    <string name="contact_delete_error">Error deleting contact</string>
    <string name="edit">Edit</string>
    <string name="chat">Chat</string>
    <string name="send">Send</string>
    <string name="call">Call</string>
    <string name="select_photo">Select photo</string>
    <string name="write_message">Write your message here</string>
    <string name="invalid_phone_number_error">Invalid phone format (e.g., +123456789 or 666111222)</string>
    <string name="error_call">Error calling</string>
    <string name="auto_created_note">Auto-created from SMS</string>
    <string name="channel_sms_name">SMS Messages</string>
    <string name="error_contact_id_missing">Error: Contact ID missing</string>
    <string name="error_contact_not_found">Error: Contact not found in database</string>
    <string name="no_phone_number">No phone number available</string>
    <string name="phone_required">Phone number required</string>
    <string name="permissions_denied">Permission denied</string>
</resources>
